clean up code & resolve multiple bugs