@@ -8,34 +8,42 @@ import com.kvdb.kvcommon.exception.NoHealthyNodesAvailable;
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
  * ClusterServer is the main server class that manages cluster nodes and handles client connections.
- * It initializes cluster nodes from a configuration file and accepts client connections to handle requests.
+ * It initializes cluster nodes from a configuration file and accepts client connections to handle
+ * requests.
  */
 public class ClusterServer {
     private static final Logger LOGGER = Logger.getLogger(ClusterServer.class.getName());
     private static final SystemConfig CONFIG = SystemConfig.getInstance();
 
-    private final int healthCheckInterval = Integer.parseInt(CONFIG.getProperty("kvdb.server.healthCheckInterval", "5"));
+    private final int healthCheckInterval =
+            Integer.parseInt(CONFIG.getProperty("kvdb.server.healthCheckInterval", "5"));
+
     private final int port;
     private final ClusterManager clusterManager;
     private final ExecutorService threadPool;
-    private final ScheduledExecutorService healthCheckScheduler = Executors.newSingleThreadScheduledExecutor();
+    private final ScheduledExecutorService healthCheckScheduler;
+
+    private volatile boolean running = false;
     private ServerSocket serverSocket;
-    private boolean running = false;
 
     public ClusterServer(int port, ClusterManager clusterManager) {
         this.port = port;
         this.clusterManager = clusterManager;
-        int threadPoolSize = Integer.parseInt(CONFIG.getProperty("kvdb.server.threadPoolSize", "10"));
-        this.threadPool = Executors.newFixedThreadPool(threadPoolSize);
+        this.threadPool = Executors.newVirtualThreadPerTaskExecutor();
+
+        this.healthCheckScheduler =
+                Executors.newSingleThreadScheduledExecutor(
+                        r -> {
+                            Thread t = new Thread(r, "kvdb-health-check");
+                            t.setDaemon(true);
+                            return t;
+                        });
     }
 
     public void start() {
@@ -43,16 +51,17 @@ public class ClusterServer {
             LOGGER.warning("Server is already running");
             return;
         }
+
         LOGGER.info("Starting ClusterServer...");
         this.clusterManager.initializeClusterNodes();
-        LOGGER.info("ClusterServer started successfully.");
+        LOGGER.info("Cluster nodes initialized.");
 
         startHealthCheckScheduler();
 
-        try {
-            serverSocket = new ServerSocket(port);
+        try (ServerSocket serverSocket = new ServerSocket(port)) {
+            this.serverSocket = serverSocket;
             running = true;
-            LOGGER.info("Server started on port " + port);
+            LOGGER.info("ClusterServer started on port " + port);
             acceptConnectionLoop();
         } catch (IOException e) {
             LOGGER.log(Level.SEVERE, "Failed to start server on port " + port, e);
@@ -65,47 +74,94 @@ public class ClusterServer {
     }
 
     private void startHealthCheckScheduler() {
-        healthCheckScheduler.scheduleAtFixedRate(() -> {
-            try {
-                LOGGER.info("Performing scheduled health check");
-                clusterManager.checkNodeHealths();
-            } catch (Exception e) {
-                LOGGER.log(Level.WARNING, "Error during scheduled health check", e);
-            }
-        }, 10, healthCheckInterval, TimeUnit.SECONDS);
+        // initial delay 10s, then run every healthCheckInterval seconds
+        healthCheckScheduler.scheduleAtFixedRate(
+                () -> {
+                    try {
+                        LOGGER.fine("Performing scheduled health check");
+                        clusterManager.checkNodeHealths();
+                    } catch (Exception e) {
+                        LOGGER.log(Level.WARNING, "Error during scheduled health check", e);
+                    }
+                },
+                10L,
+                healthCheckInterval,
+                TimeUnit.SECONDS);
     }
 
-    public void acceptConnectionLoop() {
+    private void acceptConnectionLoop() {
         while (running) {
             try {
                 Socket clientSocket = serverSocket.accept();
-                LOGGER.info("Accepted connection from " + clientSocket.getInetAddress() + ":" + clientSocket.getPort());
+                LOGGER.info(
+                        "Accepted connection from "
+                                + clientSocket.getInetAddress()
+                                + ":"
+                                + clientSocket.getPort());
                 threadPool.execute(new ClusterClientHandler(clientSocket, clusterManager));
             } catch (IOException e) {
                 if (running) {
                     LOGGER.log(Level.WARNING, "Error accepting client connection", e);
+                } else {
+                    LOGGER.info("Server socket closed; stopping accept loop");
+                    break;
                 }
             } catch (NoHealthyNodesAvailable e) {
-                LOGGER.warning("No healthy nodes available. Waiting for health check to recover nodes.");
+                LOGGER.warning(
+                        "No healthy nodes available. Waiting for health check to recover nodes.");
                 try {
-                    Thread.sleep(10000); // Small wait before trying again
+                    Thread.sleep(10_000); // Small wait before trying again
                 } catch (InterruptedException ie) {
                     Thread.currentThread().interrupt();
+                    LOGGER.warning("Accept loop interrupted while waiting for healthy nodes");
+                    break;
                 }
             } catch (Exception e) {
-                LOGGER.log(Level.SEVERE, "**Unexpected error in connection loop", e);
+                LOGGER.log(Level.SEVERE, "Unexpected error in connection loop", e);
             }
         }
     }
 
+    /**
+     * Gracefully shut down the server: - stop accepting new connections - stop health checks - stop
+     * worker threads
+     */
     public void shutdown() {
+        running = false;
+
+        // Close server socket to unblock accept()
+        if (serverSocket != null && !serverSocket.isClosed()) {
+            try {
+                serverSocket.close();
+            } catch (IOException e) {
+                LOGGER.log(Level.WARNING, "Error while closing server socket", e);
+            }
+        }
+
+        // Stop health check scheduler
+        healthCheckScheduler.shutdown();
         try {
             if (!healthCheckScheduler.awaitTermination(5, TimeUnit.SECONDS)) {
+                LOGGER.warning(
+                        "Health check scheduler did not terminate in time; forcing shutdown");
                 healthCheckScheduler.shutdownNow();
             }
         } catch (InterruptedException e) {
+            LOGGER.warning("Interrupted during health check scheduler shutdown");
             healthCheckScheduler.shutdownNow();
-            LOGGER.info("**** Interrupted during health check scheduler shutdown");
+            Thread.currentThread().interrupt();
+        }
+
+        // Stop worker thread pool
+        threadPool.shutdown();
+        try {
+            if (!threadPool.awaitTermination(10, TimeUnit.SECONDS)) {
+                LOGGER.warning("Worker thread pool did not terminate in time; forcing shutdown");
+                threadPool.shutdownNow();
+            }
+        } catch (InterruptedException e) {
+            LOGGER.warning("Interrupted during worker thread pool shutdown");
+            threadPool.shutdownNow();
             Thread.currentThread().interrupt();
         }
 
